--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,73 @@ permissions:
   id-token: write
 
 jobs:
-  hello:
-    name: Echo Hello World
+  lint:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo Hello World
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint and format code
+        run: npm run lint:fix
+
+      - name: Run Linter
+        run: npm run lint
+
+  test:
+    name: Test
+    needs: lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run unit tests
+        run: npm run test:unit
+
+      - name: Setup Cypress
+        uses: cypress-io/github-action@v2
+
+      - name: Run E2E tests
+        env:
+          CYPRESS_BASE_URL: https://example.com
+        run: npm run test:e2e
+
+  build:
+    runs-on: ubuntu-latest
+    name: Build
+    needs:
+     - Lint
+     - Test
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build production files
+        run: npm run build
